--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "An application to simplify the use of Myanimelist API and understand more how APIs in general works.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/devEdu-web/mal-api-wrapper/issues"
   },
-  "homepage": "https://github.com/devEdu-web/mal-api-wrapper#readme"
+  "homepage": "https://github.com/devEdu-web/mal-api-wrapper#readme",
+  "dependencies": {
+    "axios": "^0.25.0",
+    "pkce-challenge": "^2.2.0"
+  }
 }
